[FIX] sap.m.ProgressIndicator: Fiori 3 theme alignment
Problem:
The ProgressIndicator margin is not correctly applied in
different content densities across the Fiori 3 theme. That leads to
problems regarding this control when used inside a Table. Because of the
incorrect margin, the ProgressIndicator occupying space is increased
which leads to increasing the row height in the Table. This affects the
scrolling behaviour of the Table.

Solution:
The ProgressIndicator margin is now correctly applied in different
content densities across the Fiori 3 theme, following the design
guidelines.

SNOW: CS20230006501424

--- a/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3_dark/ProgressIndicator.less
+++ b/src/themelib_sap_fiori_3/src/sap/m/themes/sap_fiori_3_dark/ProgressIndicator.less
@@ -1,6 +1,6 @@
 /* ======================================== */
 /* CSS for control sap.m/ProgressIndicator  */
-/* Quartz Dark theme                        */
+/* Fiori 3 Dark theme                       */
 /* ======================================== */
 @sapMPITextLeftTextThreshold: 0.5;
 
@@ -11,17 +11,18 @@
 	margin-right: 0.375rem;
 }
 
-.sapMPI,
-.sapUiSizeCompact .sapMPI:not(.sapMPIDisplayOnly) {
+.sapMPI {
 	height: 1rem;
 	min-width: 4rem;
-	margin: 0.5rem 0;
+
+	&:not(.sapMPIDisplayOnly) {
+		margin: 0.5rem 0;
+	}
 }
 
-.sapMPI:not(.sapMPIDisplayOnly) {
-	margin: 0.875rem 0;
-}
-
-.sapUiSizeCompact .sapMPI:not(.sapMPIDisplayOnly) {
-	margin: 0.5rem 0;
+.sap-phone,
+.sap-tablet:not(.sap-combi) {
+	.sapMPI:not(.sapMPIDisplayOnly) {
+		margin: 0.875rem 0;
+	}
 }
